# Jalium.UI

./: .gitignore  Directory.Build.props  Jalium.UI.slnx  README.md  global.json  nuget.config  test_resources.csx
src/native/: CMakeLists.txt  Jalium.Native.sln  build-android-deps.sh  build-android.sh  version.rc.in
src/native/build-android-arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
src/native/build-android-arm64/jalium.native.core/: Makefile  cmake_install.cmake
src/native/build-android-arm64/jalium.native.platform/: Makefile  cmake_install.cmake
src/native/build-android-arm64/jalium.native.software/: Makefile  cmake_install.cmake
src/native/build-android-arm64/jalium.native.text/: Makefile  cmake_install.cmake
src/native/build-android-arm64/jalium.native.vulkan/: Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/: CMakeCache.txt  Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/jalium.native.core/: Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/jalium.native.platform/: Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/jalium.native.software/: Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/jalium.native.text/: Makefile  cmake_install.cmake
src/native/build-android-arm64_v8a/jalium.native.vulkan/: Makefile  cmake_install.cmake
src/native/build-android-deps/freetype-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/native/build-android-deps/freetype-build-x86_64/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
src/native/build-android-deps/harfbuzz-build/: CMakeCache.txt  Makefile  cmake_install.cmake  harfbuzz.pc
src/native/build-android-deps/harfbuzz-build-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
src/native/build-android-x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
src/native/build-android-x86_64/jalium.native.core/: Makefile  cmake_install.cmake
src/native/build-android-x86_64/jalium.native.platform/: Makefile  cmake_install.cmake
src/native/build-android-x86_64/jalium.native.software/: Makefile  cmake_install.cmake
src/native/build-android-x86_64/jalium.native.text/: Makefile  cmake_install.cmake
src/native/build-android-x86_64/jalium.native.vulkan/: Makefile  cmake_install.cmake
src/native/build-nmake/: CMakeCache.txt  Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.browser/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.core/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.d3d12/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.metal/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.platform/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.software/: Makefile  cmake_install.cmake
src/native/build-nmake/jalium.native.vulkan/: Makefile  cmake_install.cmake
src/native/build-nmake/lib/: jalium.native.browser.exp  jalium.native.browser.lib  jalium.native.core.exp  jalium.native.core.lib  jalium.native.d3d12.exp  jalium.native.d3d12.lib
src/native/jalium.native.aot/: CMakeLists.txt  aot_register.cpp  jalium.native.aot.static.vcxproj
src/native/jalium.native.aot/include/: jalium_aot.h
src/native/jalium.native.browser/: CMakeLists.txt  jalium.native.browser.static.vcxproj  jalium.native.browser.vcxproj
src/native/jalium.native.browser/include/: jalium_browser_api.h
src/native/jalium.native.browser/src/: browser.cpp
src/native/jalium.native.core/: CMakeLists.txt  jalium.native.core.static.vcxproj  jalium.native.core.vcxproj
src/native/jalium.native.core/include/: jalium_api.h  jalium_backend.h  jalium_gradient_sample.h  jalium_impeller_shapes.h  jalium_impeller_stroke.h  jalium_internal.h  jalium_rendering_engine.h  jalium_scanline_rasterizer.h  jalium_string_util.h  jalium_triangulate.h  jalium_types.h
src/native/jalium.native.core/src/: backend_registry.cpp  bitmap.cpp  brush.cpp  context.cpp  render_target.cpp
src/native/jalium.native.d3d12/: CMakeLists.txt  jalium.native.d3d12.static.vcxproj  jalium.native.d3d12.vcxproj
src/native/jalium.native.d3d12/include/: d3d12_backend.h  d3d12_brush_shader.h  d3d12_direct_renderer.h  d3d12_glyph_atlas.h  d3d12_impeller_engine.h  d3d12_ink_layer.h  d3d12_pipeline.h  d3d12_render_target.h  d3d12_resources.h  d3d12_shader_bytecode.h  d3d12_shader_source.h  d3d12_triangulate.h  d3d12_vello.h  d3d12_vello_bytecode.h  d3d12_vello_engine.h  d3dx12.h  liquid_glass_effects.h  transition_shader_effect.h
src/native/jalium.native.d3d12/shaders/: LiquidGlassComposite.hlsl  LiquidGlassHighlight.hlsl  LiquidGlassInnerShadow.hlsl  LiquidGlassRefraction.hlsl  bitmap_quad.ps.hlsl  bitmap_quad.vs.hlsl  bitmap_text.ps.hlsl  bitmap_text.vs.hlsl  compile_core_shaders.cmd  custom_effect.vs.hlsl  gaussian_blur.cs.hlsl  gen_bytecode_header.ps1  rounded_clip.hlsli  sdf_rect.ps.hlsl  sdf_rect.vs.hlsl  triangle.ps.hlsl  triangle.vs.hlsl  vello_backdrop.cs.hlsl  vello_bbox_clear.cs.hlsl  vello_binning.cs.hlsl  vello_clip_leaf.cs.hlsl  vello_clip_reduce.cs.hlsl  vello_coarse.cs.hlsl  vello_fine.cs.hlsl  vello_flatten.cs.hlsl  vello_path_count.cs.hlsl  vello_path_count_setup.cs.hlsl  (+4 more)
src/native/jalium.native.media.android/: CMakeLists.txt
src/native/jalium.native.media.core/: CMakeLists.txt  jalium.native.media.core.static.vcxproj  jalium.native.media.core.vcxproj
src/native/jalium.native.media.windows/: CMakeLists.txt  jalium.native.media.windows.static.vcxproj  jalium.native.media.windows.vcxproj
src/native/jalium.native.metal/: CMakeLists.txt  jalium.native.metal.vcxproj
src/native/jalium.native.platform/: CMakeLists.txt  jalium.native.platform.static.vcxproj  jalium.native.platform.vcxproj
src/native/jalium.native.software/: CMakeLists.txt  jalium.native.software.static.vcxproj
src/native/jalium.native.text/: CMakeLists.txt
src/native/jalium.native.vulkan/: CMakeLists.txt  jalium.native.vulkan.static.vcxproj  jalium.native.vulkan.vcxproj
(+1414 files in other folders)
